# task-management-system

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
apps/accounts/: admin.py  models.py
apps/accounts/migrations/: 0001_initial.py
apps/authentication/: urls.py  views.py
apps/authentication/tests/: base.py  test_jwt_auth.py
apps/tasks/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/tasks/migrations/: 0001_initial.py  0002_task_parent.py  0003_task_tasks_task_workspa_58e2a8_idx_and_more.py
apps/tasks/tests/: base.py  test_jwt_integration.py  test_permissions.py  test_task_api.py  test_task_filters.py  test_task_pagination.py  test_task_serializer.py
apps/workspaces/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/workspaces/migrations/: 0001_initial.py
config/: settings.py  urls.py
